force-app/main/default/objects/External_Company_Request__c/External_Company_Request__c.object-meta.xml
<CustomObject>
    <label>External Company Request</label>
    <nameField>
        <displayFormat>ECR-{00000000}</displayFormat>
        <label>External Company Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Company Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>