force-app/main/default/objects/External_Company_Request__c/fields/After_Dedup_Process__c.field-meta.xml
<CustomField>
    <fullName>After_Dedup_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Dedup Process</label>
    <type>Checkbox</type>
</CustomField>