force-app/main/default/objects/External_Company_Request__c/fields/City_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Code__c</fullName>
    <label>City Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>