force-app/main/default/objects/External_Company_Request__c/fields/Count_of_same_External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Count_of_same_External_Customer_Id__c</fullName>
    <label>Count of same External Customer Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>