force-app/main/default/objects/External_Company_Request__c/fields/Count_of_STRI__c.field-meta.xml
<CustomField>
    <fullName>Count_of_STRI__c</fullName>
    <label>Count of STRI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>