force-app/main/default/objects/External_Company_Request__c/fields/Disti_id_External_id__c.field-meta.xml
<CustomField>
    <fullName>Disti_id_External_id__c</fullName>
    <formula>Distributor__c&amp;&apos;-&apos;&amp;  External_Customer_Id__c</formula>
    <label>Disti id-External id</label>
    <type>Text</type>
</CustomField>