force-app/main/default/objects/External_Company_Request__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Company Requests</relationshipLabel>
    <relationshipName>External_Company_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>