force-app/main/default/objects/External_Company_Request__c/fields/External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Customer_Id__c</fullName>
    <label>External Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>