force-app/main/default/objects/External_Company_Request__c/fields/Secondary_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Name__c</fullName>
    <label>Secondary Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>