force-app/main/default/objects/External_Company_Request__c/fields/Sell_Through_Report_Import__c.field-meta.xml
<CustomField>
    <fullName>Sell_Through_Report_Import__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sell Through Report Import</label>
    <referenceTo>Sell_Through_Report_Import__c</referenceTo>
    <relationshipLabel>External Company Requests</relationshipLabel>
    <relationshipName>External_Company_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>