force-app/main/default/objects/External_Company_Request__c/fields/VS_Region__c.field-meta.xml
<CustomField>
    <fullName>VS_Region__c</fullName>
    <label>VS Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VS_Region</valueSetName>
    </valueSet>
</CustomField>