force-app/main/default/objects/External_Company_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VS_SubRegion__c</columns>
    <columns>Street__c</columns>
    <columns>Status__c</columns>
    <columns>External_Customer_Id__c</columns>
    <columns>Distributor__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>City_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>After_Dedup_Process__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>VSE_Germany_CMS_Admin</group>
    </sharedTo>
</ListView>