force-app/main/default/objects/External_Company_Request__c/listViews/Create_Today.listView-meta.xml
<ListView>
    <fullName>Create_Today</fullName>
    <columns>NAME</columns>
    <columns>External_Customer_Id__c</columns>
    <columns>Distributor__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Secondary_Customer_Name__c</columns>
    <columns>After_Dedup_Process__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
    <sharedTo>
        <group>VSE_Germany_CMS_Admin</group>
    </sharedTo>
</ListView>