force-app/main/default/objects/External_Company_Request__c/listViews/Reject.listView-meta.xml
<ListView>
    <fullName>Reject</fullName>
    <columns>NAME</columns>
    <columns>VS_SubRegion__c</columns>
    <columns>Status__c</columns>
    <columns>External_Customer_Id__c</columns>
    <columns>Distributor__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Country__c</columns>
    <columns>City_Name__c</columns>
    <columns>City_Code__c</columns>
    <columns>Street__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Rejected</label>
    <sharedTo>
        <group>VSE_Germany_CMS_Admin</group>
    </sharedTo>
</ListView>